objects/SubProject__c.object
<CustomObject>
    <fields>
        <fullName>Project_SubType__c</fullName>
        <label>Project SubType</label>
        <picklist>
            <picklistValues>
                <fullName>AAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts Payable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Office Consolidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK CRM - Concurrent with DMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK CRM Reverse Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK CRM Stongmail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK Desking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK Desking Licenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK DriveXL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK F&amp;I (CA Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK Menu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK Vehicle Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Lead Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT Wizard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT Wizard Front Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Satisfaction Management (CSM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Touch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Pencil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Contracting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Archiving (DA)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Add-On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy / Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unhook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>SubProjects</relationshipLabel>
        <relationshipName>SubProjects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RAR__c</fullName>
        <label>RAR</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT( Dealer_Group__r.Region__c )</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Request_RMS_Approved__c</fullName>
        <label>Resource Request (RMS) Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resource_Request_RMS_Submitted__c</fullName>
        <label>Resource Request (RMS) Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rush__c</fullName>
        <formula>OR((ISPICKVAL(Project_Type__c,&quot;Unhook&quot;) &amp;&amp; ( Estimated_Install_Date_EID__c  -  Contract_Roll_Called__c ) &lt; 120),
 (ISPICKVAL(Project_Type__c,&quot;Upgrade&quot;) &amp;&amp; ( Estimated_Install_Date_EID__c  -  Contract_Roll_Called__c ) &lt; 60), (ISPICKVAL(Project_Type__c,&quot;Add-On&quot;) &amp;&amp; ( Estimated_Install_Date_EID__c  -  Contract_Roll_Called__c ) &lt; 30), (ISPICKVAL(Project_Type__c,&quot;Buy / Sell&quot;) &amp;&amp; ( Estimated_Install_Date_EID__c  -  Contract_Roll_Called__c ) &lt; 60))</formula>
        <label>Rush</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <description>High-level text description of the project</description>
        <label>Scope</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Project_Type__c</fullName>
        <label>Secondary Project Type</label>
        <picklist>
            <controllingField>Project_Type__c</controllingField>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Buy-Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rush (&lt;30 Days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box / Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box w/Add On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Only / Add On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Layered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchise Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS Only Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ownership Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Merge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Specify_Other__c</fullName>
        <label>Specify Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <formula>Main_Site__r.BillingState</formula>
        <label>State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <formula>Main_Site__r.BillingStreet</formula>
        <label>Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubProject_Health_Indicator__c</fullName>
        <label>SubProject Health Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubProject_Manager_Id__c</fullName>
        <formula>Project_Manager__c</formula>
        <label>SubProject Manager Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubProject_Name__c</fullName>
        <label>SubProject Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubProject_Overview__c</fullName>
        <label>SubProject Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SubProject_Region__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>ALLIANCE-PC SOLUTIONS-ADMIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLIANCE-PC SOLUTIONS-CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLIANCE-PC SOLUTIONS-NORTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLIANCE-PC SOLUTIONS-SOUTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLIANCE-PC SOLUTIONS-WEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASBURY ADMIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTONATION-ADMINISTRATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTONATION-CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTONATION-NORTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTONATION-SOUTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTONATION-WEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADA-EAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADA-WEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENTERPRISE - ADMINISTRATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENTERPRISE - CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENTERPRISE - NORTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENTERPRISE - SOUTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENTERPRISE - WEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAJOR-ADMIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAJOR CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAJOR-CENTRAL-FLORENCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAJOR-NORTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAJOR-SOUTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAJOR-WEST-LAPALMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAJOR-WEST-PORTLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NATIONAL-ADMIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NATIONAL-CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NATIONAL NORTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NATIONAL-SOUTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NATIONAL-WEST</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubProject_Status__c</fullName>
        <label>SubProject Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Scheduling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold No Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold Facility</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TC_10__c</fullName>
        <formula>IF( ISBLANK( Training_LMS_Logins_Delivered__c ) , null ,  Training_LMS_Logins_Delivered__c  -  Training_Request_Submitted__c )</formula>
        <label>TC (&lt;=10)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>NST - Nfld Std Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATL - Atlantic Std Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EST - Eastern Std Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CST - Central Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MST - Mountain Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PST - Pacific Standard Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AKST - Alaska Std Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAST - Hawaii Std Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Implementation_Client_Mgr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training &amp; Implementation Client Mgr</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SubProjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_LMS_Logins_Delivered__c</fullName>
        <label>Training (LMS) Logins Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Request_90__c</fullName>
        <formula>IF( ISBLANK( Training_Request_Submitted__c ) , null ,  Estimated_Install_Date_EID__c  -  Training_Request_Submitted__c )</formula>
        <label>Training Request (&gt;=90)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Request_Submitted__c</fullName>
        <label>Training Request Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transition_Meeting_Conducted__c</fullName>
        <label>Transition Meeting Conducted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WFM_10__c</fullName>
        <formula>IF( ISBLANK( Resource_Request_RMS_Approved__c ) , null ,  Resource_Request_RMS_Approved__c  -  Resource_Request_RMS_Submitted__c )</formula>
        <label>WFM (&lt;=10)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <formula>Main_Site__r.Website</formula>
        <label>Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <formula>Main_Site__r.BillingPostalCode</formula>
        <label>Zip</label>
        <type>Text</type>
    </fields>
    <label>SubProject</label>
    <listViews>
        <fullName>All_At_Risk_Assigned_to_My_Associates</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>SubProject_Region__c</columns>
        <columns>Impact_Project_Numbers__c</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Install_Start_Date_Migration_Date__c</columns>
        <columns>Estimated_Install_Date_EID__c</columns>
        <columns>Number_of_Rooftops__c</columns>
        <columns>Number_of_User_Connections__c</columns>
        <columns>Training_Implementation_Client_Mgr__c</columns>
        <columns>SubProject_Status__c</columns>
        <columns>Project_SubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Does_Report_To_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>SubProject_Status__c</field>
            <operation>equals</operation>
            <value>At Risk</value>
        </filters>
        <label>All At Risk - Assigned To My Associates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_At_Risk_Project_Managed_by_Me</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>SubProject_Region__c</columns>
        <columns>Impact_Project_Numbers__c</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Install_Start_Date_Migration_Date__c</columns>
        <columns>Estimated_Install_Date_EID__c</columns>
        <columns>Number_of_Rooftops__c</columns>
        <columns>Number_of_User_Connections__c</columns>
        <columns>Training_Implementation_Client_Mgr__c</columns>
        <columns>SubProject_Status__c</columns>
        <columns>Project_SubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Project_Managed_By_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>SubProject_Status__c</field>
            <operation>equals</operation>
            <value>At Risk</value>
        </filters>
        <label>All At Risk - Project Managed By Me</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Caution_Assigned_to_My_Associates</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>SubProject_Region__c</columns>
        <columns>Impact_Project_Numbers__c</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Install_Start_Date_Migration_Date__c</columns>
        <columns>Estimated_Install_Date_EID__c</columns>
        <columns>Number_of_Rooftops__c</columns>
        <columns>Number_of_User_Connections__c</columns>
        <columns>Training_Implementation_Client_Mgr__c</columns>
        <columns>SubProject_Status__c</columns>
        <columns>Project_SubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Does_Report_To_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>SubProject_Status__c</field>
            <operation>equals</operation>
            <value>Caution</value>
        </filters>
        <label>All Caution - Assigned To My Associates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Caution_Project_Managed_by_Me</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>SubProject_Region__c</columns>
        <columns>Impact_Project_Numbers__c</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Install_Start_Date_Migration_Date__c</columns>
        <columns>Estimated_Install_Date_EID__c</columns>
        <columns>Number_of_Rooftops__c</columns>
        <columns>Number_of_User_Connections__c</columns>
        <columns>Training_Implementation_Client_Mgr__c</columns>
        <columns>SubProject_Status__c</columns>
        <columns>Project_SubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Project_Managed_By_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>SubProject_Status__c</field>
            <operation>equals</operation>
            <value>Caution</value>
        </filters>
        <label>All Caution - Project Managed By Me</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Closed_Assigned_to_My_Associates</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>SubProject_Region__c</columns>
        <columns>Impact_Project_Numbers__c</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Install_Start_Date_Migration_Date__c</columns>
        <columns>Estimated_Install_Date_EID__c</columns>
        <columns>Number_of_Rooftops__c</columns>
        <columns>Number_of_User_Connections__c</columns>
        <columns>Training_Implementation_Client_Mgr__c</columns>
        <columns>SubProject_Status__c</columns>
        <columns>Project_SubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Does_Report_To_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>SubProject_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed - Assigned To My Associates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Closed_Project_Managed_by_Me</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>SubProject_Region__c</columns>
        <columns>Impact_Project_Numbers__c</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Install_Start_Date_Migration_Date__c</columns>
        <columns>Estimated_Install_Date_EID__c</columns>
        <columns>Number_of_Rooftops__c</columns>
        <columns>Number_of_User_Connections__c</columns>
        <columns>Training_Implementation_Client_Mgr__c</columns>
        <columns>SubProject_Status__c</columns>
        <columns>Project_SubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Project_Managed_By_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>SubProject_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed - Project Managed By Me</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Open_Assigned_to_My_Associates</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>SubProject_Region__c</columns>
        <columns>Impact_Project_Numbers__c</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Install_Start_Date_Migration_Date__c</columns>
        <columns>Estimated_Install_Date_EID__c</columns>
        <columns>Number_of_Rooftops__c</columns>
        <columns>Number_of_User_Connections__c</columns>
        <columns>Training_Implementation_Client_Mgr__c</columns>
        <columns>SubProject_Status__c</columns>
        <columns>Project_SubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Does_Report_To_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>SubProject_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open - Assigned To My Associates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Open_Project_Managed_by_Me</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>SubProject_Region__c</columns>
        <columns>Impact_Project_Numbers__c</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Install_Start_Date_Migration_Date__c</columns>
        <columns>Estimated_Install_Date_EID__c</columns>
        <columns>Number_of_Rooftops__c</columns>
        <columns>Number_of_User_Connections__c</columns>
        <columns>Training_Implementation_Client_Mgr__c</columns>
        <columns>SubProject_Status__c</columns>
        <columns>Project_SubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Project_Managed_By_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>SubProject_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open - Project Managed By Me</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Alliance</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>SubProject_Region__c</columns>
        <columns>Impact_Project_Numbers__c</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Install_Start_Date_Migration_Date__c</columns>
        <columns>Estimated_Install_Date_EID__c</columns>
        <columns>Number_of_Rooftops__c</columns>
        <columns>Number_of_User_Connections__c</columns>
        <columns>Training_Implementation_Client_Mgr__c</columns>
        <columns>SubProject_Status__c</columns>
        <columns>Project_SubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SubProject_Region__c</field>
            <operation>startsWith</operation>
            <value>ALLIANCE</value>
        </filters>
        <filters>
            <field>SubProject_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Alliance</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Canada</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>SubProject_Region__c</columns>
        <columns>Impact_Project_Numbers__c</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Install_Start_Date_Migration_Date__c</columns>
        <columns>Estimated_Install_Date_EID__c</columns>
        <columns>Number_of_Rooftops__c</columns>
        <columns>Number_of_User_Connections__c</columns>
        <columns>Training_Implementation_Client_Mgr__c</columns>
        <columns>SubProject_Status__c</columns>
        <columns>Project_SubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SubProject_Region__c</field>
            <operation>startsWith</operation>
            <value>CANADA</value>
        </filters>
        <filters>
            <field>SubProject_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Canada</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Enterprise</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>SubProject_Region__c</columns>
        <columns>Impact_Project_Numbers__c</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Install_Start_Date_Migration_Date__c</columns>
        <columns>Estimated_Install_Date_EID__c</columns>
        <columns>Number_of_Rooftops__c</columns>
        <columns>Number_of_User_Connections__c</columns>
        <columns>Training_Implementation_Client_Mgr__c</columns>
        <columns>SubProject_Status__c</columns>
        <columns>Project_SubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SubProject_Region__c</field>
            <operation>startsWith</operation>
            <value>ENTERPRISE,DIVISION,AUTONATION,ASBURY,SONIC</value>
        </filters>
        <filters>
            <field>SubProject_Region__c</field>
            <operation>contains</operation>
            <value>group</value>
        </filters>
        <filters>
            <field>SubProject_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Enterprise</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Major_Central</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>SubProject_Region__c</columns>
        <columns>Impact_Project_Numbers__c</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Install_Start_Date_Migration_Date__c</columns>
        <columns>Estimated_Install_Date_EID__c</columns>
        <columns>Number_of_Rooftops__c</columns>
        <columns>Number_of_User_Connections__c</columns>
        <columns>Training_Implementation_Client_Mgr__c</columns>
        <columns>SubProject_Status__c</columns>
        <columns>Project_SubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SubProject_Region__c</field>
            <operation>startsWith</operation>
            <value>MAJOR CENTRAL</value>
        </filters>
        <filters>
            <field>SubProject_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Major Central</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Major_Northeast</fullName>
        <columns>NAME</columns>
        <columns>CMF_Numbers__c</columns>
        <columns>SubProject_Region__c</columns>
        <columns>Impact_Project_Numbers__c</columns>
        <columns>SubProject_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Install_Start_Date_Migration_Date__c</columns>
        <columns>Estimated_Install_Date_EID__c</columns>
        <columns>Number_of_Rooftops__c</columns>
        <columns>Number_of_User_Connections__c</columns>
        <columns>Training_Implementation_Client_Mgr__c</columns>
        <columns>SubProject_Status__c</columns>
        <columns>Project_SubType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SubProject_Region__c</field>
            <operation>startsWith</operation>
            <value>MAJOR-NORTHEAST</value>
        </filters>
        <filters>
            <field>SubProject_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Major Northeast</label>
        <language>en_US</language>
    </listViews>
</CustomObject>